test-suite/tests/ui/states/invalid/undeclared_delete.stderr
error: deleted state is not declared
 --> tests/ui/states/invalid/undeclared_delete.rs:8:21
  |
8 |     #[stated(delete(B))]
  |                     ^
